# RP2350Touch3.49-Exp

./: CMakeLists.txt  README.md  lvgl.cmake  touch349.cmake
boards/: waveshare_rp2350_touch_lcd_3.49.h
lib/lvgl/docs/: requirements.txt
lib/lvgl/src/core/: lv_refr.c
lib/touch349/Config/: DEV_Config.c  DEV_Config.h
lib/touch349/LCD/: CMakeLists.txt  LCD_3in49.c  LCD_3in49.h
lib/touch349/QMI8658/: QMI8658.c
lib/touch349/QSPI_PIO/: qspi.pio  qspi.pio.h  qspi_pio.c  qspi_pio.h
lib/touch349/Touch/: Touch.c  Touch.h
port/lvgl/: lv_conf.h  lv_port.c  lv_port.h
src/: CMakeLists.txt  Widgets.cpp  Widgets.h  main.cpp
